monitoring_versioned_docs/version-22.04/i-vertix-maps/edit-maps.md
---
id: edit-maps
title: Edit maps
---

## Editing - Adding objects

From **Monitoring -> Maps** page, click on the map you want to edit, then click on Edit at the top right corner to enter **Edit mode** 

![Image](../assets/maps/button_edit.png)

To save the changes applied to the map, click on **Save Map**.

To discard them click on **Reset**. 

To get back to map visualization, click on **Exit Edit Mode**.

![Image](../assets/maps/save_map.png)

![Image](../assets/maps/select.png) **Select objects** icon (available only for graphical maps): allows you to select one or more objects and reposition it/them on the map

![Image](../assets/maps/marker.png) **Create a new marker** icon (available for both graphical and geographical maps): allows you  to **add a new object** on the map.

The **object** has the following **properties**:

![Image](../assets/maps/edit_properties.png)

* **Object type**: Host, Service, Servicegroup or Hostgroup
* **Icon Properties**: select **icon size** and the **icon pack** that is to be used
* **Label Properties**: if the label is enabled, it is possible to decide what information to display, its position relative to the object, size and color.
* **Popup Properties**: to select/change popup messages settings and configure which information they should include

## Editing – Adding Links

![Image](../assets/maps/line.png) **Create a new line** icon: to add a new line/link between 2 objects

The object has the following properties:

![Image](../assets/maps/edit_line_properties.png)

* **Object type**: Host, Service, Servicegroup or Hostgroup
* **Line Properties**: you can select the **thickness** of the line and the line **appearance** 

* **Performance Data Interpreter**: it can be used to select which performance metrics have to be displayed and the position of their values.

![Image](../assets/maps/performance_data.png)


* **Label Properties**: if the label is enabled, it is possible to decide what information to display, its position relative to the object, size and color.
* Popup Properties: to select/change popup messages settings and configure which information they should include

## Editing – Adding Gadgets

![Image](../assets/maps/gadget_icon.png)**Create a new gadget icon**.

Select the **service** that has to be represented by the new Gadget.

If in **Gadget Properties > Gadget** Type you select Map, instead of a service, you have to select the map that will be displayed within/inside the current one (i.e. the one you are editing). 

**Gadget Properties**: 
* **Gadget Type**: Gauge, Performance Graph, Big Text, Map
* **Gadget Size**
* **Gadget Opacity**

![Image](../assets/maps/gadget_properties.png)

**Performance Data Interpreter**
* **Metrics** select the performance metric that has to be displayed
* **Data unit**

![Image](../assets/maps/gadget.png)

**Label Properties**: if the label is enabled, it is possible to decide what information to display, its position relative to the object, size and color.

**Popup Properties**: to select/change popup messages settings and configure which information they should include


